@startuml server-model-game
title Server — Model: Game, Player, Home & Observers (org.adsl.server.model)

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members

package "server.model" {

  class Game <<Serializable>> {
    -gameId: int
    -players: Set<Player>
    -numPlayer: int
    -board: Board
    -round: int
    -era: int
    -currentPlayer: Player
    -phase: Phase
    -isInitialized: boolean <<transient>>
    -gameObservers: List<GameObserver> <<transient>>
    -endGameObservers: List<EndGameObserver> <<transient>>
    +Game(gameId: int, numPlayer: int)
    +Game(gameId: int, numPlayer: int, round: int, era: int, players: Set<Player>, currentPlayer: Player, board: Board, phase: Phase)
    +addVirtualClient(vc: VirtualClient): void
    +removeVirtualClient(vc: VirtualClient): void
    +addObserver(o: GameObserver): void
    +removeObserver(o: GameObserver): void
    +addObserver(o: EndGameObserver): void
    +removeObserver(o: EndGameObserver): void
    +createDTO(): GameDTO
    +sendUpdateLobby(): void
    +sendUpdateLobby(message: String): void
    +sendTotemAvailable(totemAvailable: List<Totem>, message: String): void
    +sendUpdateGame(): void
    +sendUpdateGame(message: String): void
    +broadcastError(message: String): void
    +sendEventTriggered(eventTitle: String, logMessage: String): void
    +sendEndGameResults(results: List<MatchResult>, records: List<DBRecord>): void
    +sendEndGameResults(results: List<MatchResult>, records: List<DBRecord>, message: String): void
    +setupTransientAttributes(): void
    +changeEra(): void
    +changeRound(): void
    +getGameId(): int
    +getBoard(): Board
    +getPlayers(): Set<Player>
    +getCurrentPlayer(): Optional<Player>
    +getEra(): int
    +getRound(): int
    +getPhase(): Phase
    +isInitialized(): boolean
    +getNumPlayer(): int
    +setCurrentPlayer(currentPlayer: Player): void
    +setPhase(phase: Phase): void
    +setBoard(board: Board): void
    +setInitialized(initialized: boolean): void
  }

  class Player <<Serializable>> {
    -name: String
    -food: int
    -pp: int
    -color: Totem
    -cards: Map<CardType, Set<Card>>
    -lastPick: Card <<transient>>
    -isActive: boolean <<transient>>
    -buildingBonus: BuildingBonus <<transient>>
    +Player(name: String)
    +Player(name: String, food: int, pp: int, color: Totem, cards: Map<CardType, Set<Card>>)
    +createDTO(): PlayerDTO
    -readObject(stream: ObjectInputStream): void
    +changePP(pp: int): void
    +changeFood(food: int): void
    +getCards(): Map<CardType, Set<Card>>
    +getBuildingBonus(): BuildingBonus
    +getFood(): int
    +getLastPick(): Card
    +getColor(): Totem
    +getPp(): int
    +getName(): String
    +isActive(): boolean
    +setLastPick(lastPick: Card): void
    +setColor(color: Totem): void
    +setActive(active: boolean): void
  }

  class Home {
    -games: List<Integer>
    -observers: List<HomeObserver>
    +Home()
    +addGame(gameId: int): void
    +removeGame(gameId: Integer): void
    +update(): void
    +update(message: String): void
    +update(gamePlayers: Map<Integer, List<String>>, gameCapacity: Map<Integer, Integer>): void
    +update(gamePlayers: Map<Integer, List<String>>, gameCapacity: Map<Integer, Integer>, message: String): void
    +addObserver(observer: HomeObserver): void
    +removeObserver(observer: HomeObserver): void
  }

  interface GameObserver {
    +updateGame(game: Game): void
    +updateGame(game: Game, message: String): void <<default>>
    +updateLobby(gameId: int, players: List<String>, numPlayersAllowed: int): void
    +updateTotemAvailable(totemsAvailable: List<Totem>, message: String): void
    +updateLobby(gameId: int, players: List<String>, numPlayersAllowed: int, message: String): void <<default>>
    +notifyError(message: String): void <<default>>
    +notifyEventTriggered(eventTitle: String, logMessage: String): void <<default>>
  }

  interface EndGameObserver {
    +notifyEndGame(id: int, results: List<MatchResult>, records: List<DBRecord>): void
    +notifyEndGame(id: int, results: List<MatchResult>, records: List<DBRecord>, message: String): void <<default>>
  }
}

package "server.network" {
  interface HomeObserver {
    +updateHome(activeGames: List<Integer>): void
    +updateHome(activeGames: List<Integer>, message: String): void <<default>>
    +updateHome(activeGames: List<Integer>, gamePlayers: Map, gameCapacity: Map): void <<default>>
    +updateHome(activeGames: List<Integer>, gamePlayers: Map, gameCapacity: Map, message: String): void <<default>>
  }
}

Game *-- "many" Player : players
Game *-- "1" "server.model.board.Board" : board
Game o-- "*" GameObserver : observers
Game o-- "*" EndGameObserver : endObservers
Home o-- "*" HomeObserver : observers

Player --> "shared.enums.CardType"
Player --> "shared.enums.Totem"
Player *-- "1" "server.model.cards.buildings.utils.BuildingBonus"
Player o-- "*" "server.model.cards.Card" : cards by type

Game ..> "shared.model.GameDTO" : createDTO()
Player ..> "shared.model.PlayerDTO" : createDTO()

note bottom of Game
  Transient observer lists are rebuilt by
  setupTransientAttributes() after recovery.
  VirtualClient implements both GameObserver
  and EndGameObserver.
end note

@enduml
